--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <link href="src/styles.css" rel="stylesheet" type="text/css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <link href="src/styles.css" rel="stylesheet" type="text/css" />
     <script
       src="https://kit.fontawesome.com/0b0be9e4a7.js"
       crossorigin="anonymous"
@@ -75,6 +75,15 @@
         </div>
       </div>
     </div>
+    <footer class="footer-info">
+      <a
+        class="code-link"
+        href="https://github.com/Izabellalealg/Week6-challenge"
+      >
+        Coded
+      </a>
+      by Izabella
+    </footer>
     <script src="src/index.js"></script>
   </body>
 </html>
